--- a/submission/primiero.bib
+++ b/submission/primiero.bib
@@ -504,7 +504,7 @@
 }
 
 @article{Beall:TheReviewOfSymbolicLogic:2011,
-  author = {Beall, JC C.},
+  author = {Beall, Jc},
   title = {Multiple-Conclusion LP And Default Classicality},
   journal = {The Review of Symbolic Logic},
   uuid = {803771CD-C623-420D-A01D-8055F64F5F7B},
