added info about publication for distribution as pre-print

--- a/submission/AdaptiveND_PrimieroAllo_revised_2.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised_2.tex
@@ -223,7 +223,10 @@
 
 
 %opening
-\title{Annotated Natural Deduction for Adaptive Reasoning}
+\title{{\scriptsize Forthcoming in Can Ba\c{s}kent \& Thomas M. Ferguson (eds.)\\
+\textit{Graham Priest on Dialetheism and Paraconsistency},\\
+Outstanding Contributions in Logic, Springer.\\}
+Annotated Natural Deduction for Adaptive Reasoning}
 \author{Patrick Allo\thanks{Centre for Logic and Philosophy of Science, Vrije Universiteit Brussel \&
 Oxford Internet Institute, University of Oxford.
 Supported by the European Union’s Horizon 2020 research and innovation programme under the Marie Sk\l{}odowska-Curie Grant Agreement No. 657017.}
